# ShootingStar

./: .bazelrc  .gitattributes  .gitignore  MODULE.bazel  README.md  compile_commands.json
.github/workflows/: grpc_demo_ci.yml  weather_fetcher_ci.yaml
ci_cd/docker_files/: Dockerfile.base_image_for_compiling  Dockerfile.weather_fetcher_service  base_image_for_compiling  base_image_for_compiling_with_cache  weather_fetcher  weather_fetcher_service
docs/: README.zh-CN.md
manifests/: k8s_grpc_client_demo.yaml  k8s_grpc_service_demo.yaml  k8s_namespace_grpc_demo.yaml
manifests/local/: shootingstar_namespace.yaml  weather_fetcher_service.yaml
protos/: BUILD.bazel  profile.proto  recommendation_engine.proto  recommender_engine.proto  weather_data.proto  weather_fetcher.proto
protos/recommendation_engine/: BUILD.bazel  profile.proto  ranking.proto  recommendation_engine.proto  retrieval.proto  retriever.proto
protos/weather_forecast/: BUILD.bazel  fetcher.proto  weather_data.proto
src/GrpcClientDemo/: Dockerfile  Dockerfile.Development  GrpcClientDemo.cs  GrpcClientDemo.csproj
src/GrpcServiceDemo/: Dockerfile  Dockerfile.Development  GrpcServiceDemo.csproj  Main.cs  README.md  publish.sh
src/Protos/: BUILD  greet.proto
src/clients/: BUILD.bazel  client_runtime.h  common.cpp  common.h  elasticsearch_client.cpp  profile_client.cpp  recommendation_engine_client.cpp  recommendation_engine_es_client.cpp  recommendation_engine_profile_client.cpp  recommendation_engine_ranking_client.cpp  recommendation_engine_redis_client.cpp  recommendation_engine_retrieval_client.cpp  recommendation_engine_retrieval_orchestrator_client.cpp  recommendation_engine_retriever_client.cpp  recommender_engine_client.cpp  redis_client.cpp  weather_fetcher_client.cpp  weather_forecast_fetcher_client.cpp
src/cpp/: BUILD  greet_server.cc
src/protos/: BUILD.bazel  weather_data.proto  weather_fetcher.proto
src/recommendation_engine/gateway/: BUILD.bazel  config.debug.yaml  config.k8s.yaml  gateway_service.cpp  gateway_service.h  main.cpp
src/recommendation_engine/profile/: BUILD.bazel  caching_profile_store.cpp  caching_profile_store.h  config.debug.yaml  config.k3s.yaml  config.k8s.yaml  elasticsearch_profile_store.cpp  elasticsearch_profile_store.h  local_file_profile_store.cpp  local_file_profile_store.h  main.cpp  profile_service.cpp  profile_service.h  profile_store.h
src/recommendation_engine/ranking/: BUILD.bazel  caching_item_index_store.cpp  caching_item_index_store.h  config.debug.yaml  config.k8s.yaml  elasticsearch_item_index_store.cpp  elasticsearch_item_index_store.h  heuristic_ranker.cpp  heuristic_ranker.h  item_index_store.cpp  item_index_store.h  local_file_item_index_store.cpp  local_file_item_index_store.h  main.cpp  ranker.h  ranking_service.cpp  ranking_service.h
src/recommender_engine/gateway/: BUILD.bazel  gateway_service.cpp  gateway_service.h  main.cpp
src/utilities/elasticsearch_client/: BUILD.bazel  elasticsearch_client.cpp  elasticsearch_client.h
src/utilities/global_config/: BUILD.bazel  global_config.cpp  global_config.h
src/utilities/grpc_service_runner/: BUILD.bazel  grpc_service_runner.h
src/utilities/http_client/: BUILD.bazel  curl_handle_pool.cpp  curl_handle_pool.h  curl_http_client.cpp  curl_http_client.h  http_client.h
src/utilities/local_profile_loader/: BUILD.bazel  local_profile_loader.cpp  local_profile_loader.h
src/utilities/logger/: BUILD.bazel  logger.cpp  logger.h  logger_registry.cpp  logger_registry.h
src/utilities/redis_client/: BUILD.bazel  redis_client.cpp  redis_client.h
src/utilities/runtime_utilities/: BUILD.bazel  runtime_utilities.cpp  runtime_utilities.h
src/weather_fetcher/: .main.cpp.swp  BUILD.bazel  main.cpp  weather_fetcher_service.cpp  weather_fetcher_service.h
src/weather_forecast/fetcher/: BUILD.bazel  fetcher_service.cpp  fetcher_service.h  main.cpp
tests/recommendation_engine/profile/: BUILD.bazel  caching_profile_store_test.cpp  elasticsearch_profile_store_test.cpp  local_file_profile_store_test.cpp  local_file_profile_store_testdata.jsonl  profile_service_test.cpp
tests/recommendation_engine/ranking/: BUILD.bazel  caching_item_index_store_test.cpp  elasticsearch_item_index_store_test.cpp  heuristic_ranker_test.cpp  item_index_store_test.cpp  local_file_item_index_store_test.cpp  ranking_service_test.cpp
tests/testdata/: BUILD.bazel
tests/testdata/profiles/: demo_profiles.json
tests/testdata/recommendation_engine/local_recommendation_fixture/: item_similarity.jsonl  manifest.json  profiles.jsonl  user_similarity.jsonl
tests/testdata/recommendation_engine/profile/: demo_profiles.jsonl
tests/testdata/utilities/pb_data_handler/: json_to_pb_cases.json  roundtrip_profile.json
tests/utilities/config_helper/: BUILD.bazel  config_helper_test.cpp
tests/utilities/elasticsearch_client/: BUILD.bazel  elasticsearch_client_test.cpp
tests/utilities/global_config/: BUILD.bazel  global_config_test.cpp
tests/utilities/http_client/: BUILD.bazel  curl_handle_pool_test.cpp  curl_http_client_test.cpp
tests/utilities/local_profile_loader/: BUILD.bazel  local_profile_loader_test.cpp
tests/utilities/pb_data_handler/: BUILD.bazel  pb_data_handler_test.cpp
tests/utilities/resource_pool/: BUILD.bazel  resource_pool_test.cpp
tools/: build_base_image_for_compiling_with_cache.sh  build_image_for_compiling.sh  build_images_for_k8s.sh  check_es_rollout_stats.sh  check_grpc_client_response.sh  check_redis_functionality.sh  check_redis_rollout_status.sh  clean_up_k8s_namespaces_of_actions.sh  clean_up_resources_of_actions.sh  common.sh  compile_in_docker.sh  deploy_on_local.py  docker_build_image_and_start_container.sh  download_pod_logs.sh  generate_secrets_across_namespaces.sh  generate_self_signed_cert.sh  init_kubernetes_cluster.sh  install_redis_operator_via_helm.sh  k8s_grpc_client_demo.yaml  k8s_grpc_service_demo.yaml  refresh_compile_commands.py  start_image_registry_service.sh
tools/item_index_es/: README.md  build_index_and_write_to_es.sh
tools/offline_data_processing/: README.md  clear_db.sh  (+10 more)
(+193 files in other folders)
