"""
This module defines dependencies for the Shooting Star project.
"""

module(
    name = "shooting_star",
    version = "0.1.0",
    repo_name = "com_github_zhanglue_shootingstar",
)

bazel_dep(name = "abseil-cpp", version = "20250127.0")
bazel_dep(name = "grpc", version = "1.71.0")
bazel_dep(name = "protobuf", version = "30.0")
bazel_dep(name = "re2", version = "2024-07-02")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
