"""
This module defines dependencies for the Shooting Star project.
"""

module(
    name = "shooting_star",
    version = "0.1.0",
    repo_name = "com_github_zhanglue_shootingstar",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "curl", version = "8.8.0")
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "re2", version = "2025-08-12")
bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "rules_proto", version = "7.1.0")
