package(default_visibility = ["//visibility:public"])

load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# WeatherData
proto_library(
    name = "weather_data_proto",
    srcs = ["weather_data.proto"],
)

cc_proto_library(
    name = "weather_data_cc",
    deps = [":weather_data_proto"],
)

# WeatherFetcher
proto_library(
    name = "weather_fetcher_proto",
    srcs = ["weather_fetcher.proto"],
    deps = [":weather_data_proto"],
)

cc_proto_library(
    name = "weather_fetcher_cc",
    deps = [":weather_fetcher_proto"],
)

cc_grpc_library(
    name = "weather_fetcher_cc_grpc",
    srcs = ["weather_fetcher_proto"],
    grpc_only = True,
    deps = [":weather_fetcher_cc"],
)

# Profile
proto_library(
    name = "profile_proto",
    srcs = ["profile.proto"],
)

cc_proto_library(
    name = "profile_cc",
    deps = [":profile_proto"],
)

# RecommenderEngine
proto_library(
    name = "recommender_engine_proto",
    srcs = ["recommender_engine.proto"],
    deps = [":profile_proto"],
)

cc_proto_library(
    name = "recommender_engine_cc",
    deps = [":recommender_engine_proto"],
)

cc_grpc_library(
    name = "recommender_engine_cc_grpc",
    srcs = ["recommender_engine_proto"],
    grpc_only = True,
    deps = [":recommender_engine_cc"],
)
