package(default_visibility = ["//visibility:public"])

load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "recommendation_engine_proto",
    srcs = ["recommendation_engine.proto"],
    deps = [":profile_proto"],
)

cc_proto_library(
    name = "recommendation_engine_cc",
    deps = [":recommendation_engine_proto"],
)

cc_grpc_library(
    name = "recommendation_engine_cc_grpc",
    srcs = ["recommendation_engine_proto"],
    grpc_only = True,
    deps = [":recommendation_engine_cc"],
)

proto_library(
    name = "profile_proto",
    srcs = ["profile.proto"],
)

cc_proto_library(
    name = "profile_cc",
    deps = [":profile_proto"],
)

cc_grpc_library(
    name = "profile_cc_grpc",
    srcs = ["profile_proto"],
    grpc_only = True,
    deps = [":profile_cc"],
)

proto_library(
    name = "retrieval_proto",
    srcs = ["retrieval.proto"],
    deps = [":profile_proto"],
)

cc_proto_library(
    name = "retrieval_cc",
    deps = [":retrieval_proto"],
)

cc_grpc_library(
    name = "retrieval_cc_grpc",
    srcs = ["retrieval_proto"],
    grpc_only = True,
    deps = [":retrieval_cc"],
)
