package(default_visibility = ["//visibility:public"])

load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "weather_data_proto",
    srcs = ["weather_data.proto"],
)

cc_proto_library(
    name = "weather_data_cc",
    deps = [":weather_data_proto"],
)

proto_library(
    name = "fetcher_proto",
    srcs = ["fetcher.proto"],
    deps = [":weather_data_proto"],
)

cc_proto_library(
    name = "fetcher_cc",
    deps = [":fetcher_proto"],
)

cc_grpc_library(
    name = "fetcher_cc_grpc",
    srcs = ["fetcher_proto"],
    grpc_only = True,
    deps = [":fetcher_cc"],
)
