package(default_visibility = ["//src/clients:__pkg__"])

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "weather_fetcher_client",
    srcs = ["weather_fetcher_client.cpp"],
    deps = [
        "//protos:weather_fetcher_cc",
        "//protos:weather_fetcher_cc_grpc",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "recommendation_engine_client",
    srcs = ["recommendation_engine_client.cpp"],
    deps = [
        "//protos:recommendation_engine_cc",
        "//protos:recommendation_engine_cc_grpc",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "profile_client",
    srcs = ["profile_client.cpp"],
    deps = [
        "//protos:profile_cc",
        "//protos:profile_cc_grpc",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)
