package(default_visibility = ["//src/clients:__pkg__"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "client_runtime",
    hdrs = ["client_runtime.h"],
)

cc_binary(
    name = "weather_forecast_fetcher_client",
    srcs = ["weather_forecast_fetcher_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/weather_forecast:fetcher_cc",
        "//protos/weather_forecast:fetcher_cc_grpc",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "elasticsearch_client",
    srcs = ["elasticsearch_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:profile_cc",
        "//src/utilities/elasticsearch_client:elasticsearch_client",
        "//src/utilities/pb_data_handler:pb_data_handler",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "redis_client",
    srcs = ["redis_client.cpp"],
    deps = [
        ":client_runtime",
        "//src/utilities/redis_client:redis_client",
    ],
)

cc_binary(
    name = "recommendation_engine_client",
    srcs = ["recommendation_engine_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:recommendation_engine_cc",
        "//protos/recommendation_engine:recommendation_engine_cc_grpc",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "recommendation_engine_profile_client",
    srcs = ["recommendation_engine_profile_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:profile_cc",
        "//protos/recommendation_engine:profile_cc_grpc",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "recommendation_engine_retrieval_client",
    srcs = ["recommendation_engine_retrieval_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:retrieval_cc",
        "//protos/recommendation_engine:retrieval_cc_grpc",
        "//src/utilities/local_profile_loader:local_profile_loader",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "recommendation_engine_retriever_client",
    srcs = ["recommendation_engine_retriever_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:retriever_cc",
        "//protos/recommendation_engine:retriever_cc_grpc",
        "//src/utilities/local_profile_loader:local_profile_loader",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)

cc_binary(
    name = "recommendation_engine_ranking_client",
    srcs = ["recommendation_engine_ranking_client.cpp"],
    deps = [
        ":client_runtime",
        "//protos/recommendation_engine:ranking_cc",
        "//protos/recommendation_engine:ranking_cc_grpc",
        "//src/utilities/json_parser:json_parser",
        "//src/utilities/local_profile_loader:local_profile_loader",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@protobuf//:protobuf",
    ],
)
