package(default_visibility = ["//visibility:public"])

load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_protocolbuffers_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# WeatherData
proto_library(
    name = "weather_data_proto",
    srcs = ["weather_data.proto"],
)

cc_proto_library(
    name = "weather_data_cc",
    deps = [":weather_data_proto"],
)

# WeatherFetcher
proto_library(
    name = "weather_fetcher_proto",
    srcs = ["weather_fetcher.proto"],
    deps = [":weather_data_proto"],
)

cc_proto_library(
    name = "weather_fetcher_cc",
    deps = [":weather_fetcher_proto"],
)

# gRPC
cc_grpc_library(
    name = "weather_fetcher_cc_grpc",
    srcs = ["weather_fetcher_proto"],
    grpc_only = True,
    deps = [":weather_fetcher_cc"],  # Only depend on cc_proto_library
)
