package(default_visibility = ["//src/weather_fetcher:__pkg__"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "weather_fetcher_service",
    srcs = [
        "weather_fetcher_service.cpp",
    ],
    hdrs = [
        "weather_fetcher_service.h",
    ],
    deps = [
        "//protos:weather_data_cc",
        "//protos:weather_fetcher_cc",
        "//protos:weather_fetcher_cc_grpc",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_binary(
    name = "weather_fetcher_server",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":weather_fetcher_service",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
