package(default_visibility = ["//visibility:public"])

exports_files([
    "profiles/demo_profiles.json",
    "recommendation_engine/profile/demo_profiles.json",
    "recommendation_engine/profile/demo_profiles.jsonl",
    "utilities/pb_data_handler/json_to_pb_cases.json",
    "utilities/pb_data_handler/roundtrip_profile.json",
])
