package(default_visibility = ["//src/recommendation_engine/gateway:__pkg__"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "gateway_lib",
    srcs = [
        "gateway_service.cpp",
    ],
    hdrs = [
        "gateway_service.h",
    ],
    deps = [
        "//protos/recommendation_engine:profile_cc",
        "//protos/recommendation_engine:profile_cc_grpc",
        "//protos/recommendation_engine:recommendation_engine_cc",
        "//protos/recommendation_engine:recommendation_engine_cc_grpc",
        "//protos/recommendation_engine:retrieval_cc",
        "//protos/recommendation_engine:retrieval_cc_grpc",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
    ],
)

cc_binary(
    name = "gateway_bin",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":gateway_lib",
        "//src/utilities/global_config:global_config",
        "//src/utilities/logger:logger",
    ],
)
