package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "profile_lib",
    srcs = [
        "caching_profile_store.cpp",
        "elasticsearch_profile_store.cpp",
        "local_file_profile_store.cpp",
        "profile_service.cpp",
    ],
    hdrs = [
        "caching_profile_store.h",
        "elasticsearch_profile_store.h",
        "local_file_profile_store.h",
        "profile_service.h",
        "profile_store.h",
    ],
    deps = [
        "//protos/recommendation_engine:profile_cc",
        "//protos/recommendation_engine:profile_cc_grpc",
        "//src/utilities/elasticsearch_client:elasticsearch_client",
        "//src/utilities/global_config:global_config",
        "//src/utilities/logger:logger",
        "//src/utilities/lru_cache:lru_cache",
        "//src/utilities/pb_data_handler:pb_data_handler",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@abseil-cpp//absl/strings:str_format",
        "@grpc//:grpc++",
    ],
)

cc_binary(
    name = "profile_bin",
    srcs = ["main.cpp"],
    deps = [
        ":profile_lib",
        "//src/utilities/global_config:global_config",
        "//src/utilities/logger:logger",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
    ],
)
