package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "elasticsearch_client",
    srcs = ["elasticsearch_client.cpp"],
    hdrs = ["elasticsearch_client.h"],
    deps = [
        "//src/utilities/http_client:curl_http_client",
        "//src/utilities/http_client:http_client",
        "//src/utilities/runtime_utilities:runtime_utilities",
    ],
)
