package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "global_config",
    srcs = ["global_config.cpp"],
    hdrs = ["global_config.h"],
    deps = [
        "//src/utilities/logger:logger",
        "@yaml-cpp//:yaml-cpp",
    ],
)
