package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "grpc_service_runner",
    hdrs = ["grpc_service_runner.h"],
    deps = [
        "//src/utilities/global_config:global_config",
        "//src/utilities/logger:logger",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
    ],
)
