package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "local_profile_loader",
    srcs = ["local_profile_loader.cpp"],
    hdrs = ["local_profile_loader.h"],
    deps = [
        "//protos/recommendation_engine:profile_cc",
        "//src/utilities/pb_data_handler:pb_data_handler",
    ],
)
