package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "redis_client",
    srcs = ["redis_client.cpp"],
    hdrs = ["redis_client.h"],
    deps = [
        "//src/utilities/global_config:global_config",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@redis_plus_plus//:redis++",
    ],
)
