package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "item_index_store_test",
    srcs = ["item_index_store_test.cpp"],
    size = "small",
    deps = [
        "//src/recommendation_engine/ranking:item_index_store",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "local_file_item_index_store_test",
    srcs = ["local_file_item_index_store_test.cpp"],
    data = [
        "//tests/testdata:recommendation_engine/local_recommendation_fixture/item_index.jsonl",
    ],
    size = "small",
    deps = [
        "//src/recommendation_engine/ranking:local_file_item_index_store",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "elasticsearch_item_index_store_test",
    srcs = ["elasticsearch_item_index_store_test.cpp"],
    size = "small",
    deps = [
        "//src/recommendation_engine/ranking:elasticsearch_item_index_store",
        "//src/utilities/elasticsearch_client:elasticsearch_client",
        "//src/utilities/http_client:http_client",
        "@googletest//:gtest_main",
    ],
)
