package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "global_config_test",
    srcs = ["global_config_test.cpp"],
    size = "small",
    deps = [
        "//src/utilities/global_config:global_config",
        "@googletest//:gtest_main",
    ],
)
