package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "local_profile_loader_test",
    srcs = ["local_profile_loader_test.cpp"],
    data = [
        "//tests/testdata:recommendation_engine/profile/demo_profiles.json",
    ],
    size = "small",
    deps = [
        "//src/utilities/local_profile_loader:local_profile_loader",
        "//src/utilities/runtime_utilities:runtime_utilities",
        "@googletest//:gtest_main",
    ],
)
